--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "subtext/collections": "^1.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "12.3.0"
+        "phpunit/phpunit": "12.3.0",
+        "friendsofphp/php-cs-fixer": "^3.85"
     }
 }
