--- a/.github/workflows/tests-unit.yml
+++ b/.github/workflows/tests-unit.yml
@@ -13,6 +13,8 @@ jobs:
   phpunit_test:
     name: "Unit Test"
     runs-on: ubuntu-22.04
+    env:
+      XDEBUG_MODE: coverage
     steps:
       - name: Checkout
         uses: actions/checkout@v4
