--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       DB_HOST: ${DB_HOST}
       DB_PASS: ${DB_PASS}
       DB_NAME: ${DB_NAME}
+      XDEBUG_MODE: ${XDEBUG_MODE}
     volumes:
       - ./:/app
     working_dir: /app
